add start of audio vae

--- a/notebooks/etienne/vae_etienne.ipynb
+++ b/notebooks/etienne/vae_etienne.ipynb
@@ -763,7 +763,6 @@
     "from pathlib import Path\n",
     "\n",
     "\n",
-    "\n",
     "def latent_explore(model, n_latent, n_images=32, min=-1, max=1, fixed=0):\n",
     "    with torch.no_grad():\n",
     "        n_images = 16\n",
@@ -1122,7 +1121,9 @@
     "    beta = beta_interval[0]\n",
     "    for epoch in range(n_epochs):\n",
     "        beta = beta_warmup(epoch, beta_interval, beta_epoch_interval)\n",
-    "        logger.info(f\"epoch {epoch+1}/{n_epochs}; beta={beta:.2f}; {epoch * len(train_dataset)} examples seen\")\n",
+    "        logger.info(\n",
+    "            f\"epoch {epoch+1}/{n_epochs}; beta={beta:.2f}; {epoch * len(train_dataset)} examples seen\"\n",
+    "        )\n",
     "        WRITER.add_scalar(\"beta\", beta, epoch)\n",
     "\n",
     "        logger.info(\"training\")\n",
