Updates from Overleaf

--- a/report/neurips_2023.sty
+++ b/report/neurips_2023.sty
@@ -358,7 +358,7 @@
 
     % line numbers for submission
     \RequirePackage{lineno}
-    \linenumbers
+    %\linenumbers
 
     % fix incompatibilities between lineno and amsmath, if required, by
     % transparently wrapping linenomath environments around amsmath
