new archi 5 couches

--- a/notebooks/audio_ex_dataset.ipynb
+++ b/notebooks/audio_ex_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,13 +57,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "db_path = '/Users/estevep/Documents/Temporal-Audio-VAE/data/'\n",
-    "sr = 44100\n",
-    "dataset = AudioExampleDataset(db_path=db_path)"
+    "db_path = '/home/etiandre' # ne contient pas data.mdb\n",
+    "dataset = AudioExampleDataset(db_path=db_path)\n",
+    "print(len(dataset))"
    ]
   },
   {
@@ -344,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
